--- a/harithmapos/templates/invoice/update.html
+++ b/harithmapos/templates/invoice/update.html
@@ -103,10 +103,10 @@
           </div>
         </div>
 
-        <div class="row"> <!-- Vehical Number -->
+        <div class="row"> <!-- Vehicle Number -->
           <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Vehical</span>
-            <input type="text" class="form-control" aria-label="Vehical Number" aria-describedby="inputGroup-sizing-default" placeholder="{{invoice_head.vehical.id|string+' | '+invoice_head.vehical.number}}" disabled>
+            <span class="input-group-text" id="inputGroup-sizing-default">Vehicle</span>
+            <input type="text" class="form-control" aria-label="Vehicle Number" aria-describedby="inputGroup-sizing-default" placeholder="{{invoice_head.vehicle.id|string+' | '+invoice_head.vehicle.number}}" disabled>
           </div>
         </div>
 
