--- a/harithmapos/templates/test.html
+++ b/harithmapos/templates/test.html
@@ -162,9 +162,9 @@
               <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Madhawa Manchanayake" disabled>
           </div>
           <div class="input-group mb-3">
-              <span class="input-group-text" id="inputGroup-sizing-default">Vehical</span>
-              <input class="form-control" id="vehicalDataList" list="datalistOptionsVehical" name="vehical" required type="text" value="2 | BAN-5237">
-                  <datalist id="datalistOptionsVehical">
+              <span class="input-group-text" id="inputGroup-sizing-default">Vehicle</span>
+              <input class="form-control" id="vehicleDataList" list="datalistOptionsVehicle" name="vehicle" required type="text" value="2 | BAN-5237">
+                  <datalist id="datalistOptionsVehicle">
                       
                           <option value="2 | BAN-5237">
                       
