--- a/harithmapos/templates/dashboard/customer_invoice.html
+++ b/harithmapos/templates/dashboard/customer_invoice.html
@@ -9,7 +9,7 @@
             <div class="card bg-body-tertiary">
                 <div class="card-header d-flex">
                     <span><b>{{ invoice_head.washbay.name }}</b></span>
-                    <span class="ms-auto"><b>{{ invoice_head.vehical.number }}</b></span>
+                    <span class="ms-auto"><b>{{ invoice_head.vehicle.number }}</b></span>
                     {% if invoice_head.service_status > 0 and invoice_head.service_status < 5 %}
                         <span class="ms-auto text-success"><i class="bi bi-circle-fill"></i> In bay</span>
                     {% else %}
