--- a/harithmapos/templates/test.html
+++ b/harithmapos/templates/test.html
@@ -82,7 +82,7 @@
 
         <div class="col-6">
           <input autocomplete="off" class="form-control" id="itemSearch" name="item" placeholder="Type to search item..." required type="text" value="">
-          <ul class="dropdown-menu w-100" id="itemDropdown" aria-labelledby="itemSearch" style="position: absolute; top: 100%; left: 0; z-index: 1050;"></ul>
+          <ul class="dropdown-menu w-100" id="itemDropdown" aria-labelledby="itemSearch"></ul>
         </div>
 
         <div class="col-2">
@@ -203,10 +203,10 @@
               <label class="btn btn-outline-secondary btn-lg" for="serviceStatusRadio2">Washing</label>
           
               <input type="radio" class="btn-check" name="service_status" id="serviceStatusRadio3" value="3" autocomplete="off" >
-              <label class="btn btn-outline-secondary btn-lg" for="serviceStatusRadio3">Drying</label>
+              <label class="btn btn-outline-secondary btn-lg" for="serviceStatusRadio3">Polishing</label>
           
-              <input type="radio" class="btn-check" name="service_status" id="serviceStatusRadio5" value="5" autocomplete="off" >
-              <label class="btn btn-outline-secondary btn-lg" for="serviceStatusRadio5">Done</label>
+              <input type="radio" class="btn-check" name="service_status" id="serviceStatusRadio4" value="4" autocomplete="off" >
+              <label class="btn btn-outline-secondary btn-lg" for="serviceStatusRadio4">Done</label>
           
         </div>
     </div>
