--- a/harithmapos/templates/user/login.html
+++ b/harithmapos/templates/user/login.html
@@ -15,7 +15,7 @@
             {% endwith %}
             <div class="card">
                 <header class="card-header">
-                    <h4 class="card-title mt-2">Login Form</h4>
+                    <h4 class="card-title mt-2 mb-0">Login</h4>
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
