--- a/harithmapos/templates/user/account.html
+++ b/harithmapos/templates/user/account.html
@@ -1,27 +1,29 @@
 {% extends 'layout/base.html' %}
+{% block title %} Home {% endblock %}
 {% block body %}
-<div class="container rounded">
+<div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-3">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ user_image_file }}">
-                <h4 class="font-weight-bold mt-4">{{ current_user.name }}</h4>
-                <span class="text-secondary">{{ current_user.email }}</span>
+            <div class="card">
+                <div class="card-body d-flex flex-column align-items-center text-center">
+                    <img class="rounded-circle mb-3" width="150px" src="{{ user_image_file }}">
+                    <h4 class="font-weight-bold mb-2">{{ current_user.name }}</h4>
+                    <span class="text-muted">{{ current_user.email }}</span>
+                </div>
             </div>
         </div>
-        <div class="col-md-5">
-            <div class="p-3 py-5">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}" role="alert">
-                            {{message}}
-                        </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Account Settings</h4>
-                </div>
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                            <div class="alert alert-{{ category }}" role="alert">
+                                {{message}}
+                            </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                 <div class="row mt-3">
                     <form method="POST" action="" enctype="multipart/form-data">
                         {{ form.hidden_tag() }}
