--- a/harithmapos/templates/user/register.html
+++ b/harithmapos/templates/user/register.html
@@ -1,11 +1,12 @@
 {% extends 'layout/base.html' %}
+{% block title %} Home {% endblock %}
 {% block body %}
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
                 <header class="card-header">
-                    <h4 class="card-title mt-2">Register Form</h4>
+                    <h4 class="card-title mt-2 mb-0">Register</h4>
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
